--- a/PythonTraining/渡一教育/Web前端开发/html+css前端零基础入门教程/3、CSS基础/1、为网页添加样式/index.html
+++ b/PythonTraining/渡一教育/Web前端开发/html+css前端零基础入门教程/3、CSS基础/1、为网页添加样式/index.html
@@ -5,19 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1{
+        h1 {
             color: red;
             background-color: lightblue;
             text-align: center;
         }
-        .red{
-            color:red;
-            font-size:2em;
+
+        .red {
+            color: red;
+            font-size: 2em;
+        }
+        .big-center{
+            font-size: 3em;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    
-
+<p>Lorem ipsum dolor sit amet.</p>
+<p>Lorem ipsum dolor sit amet.</p>
+<p class="big-center">Aliquam deleniti quis commodi incidunt?</p>
+<p>Placeat voluptates doloribus necessitatibus reiciendis.</p>
+<p>Modi nostrum molestiae sunt perspiciatis.</p>
+<p>Distinctio veritatis consectetur accusamus. Dolorum?</p>
 </body>
 </html>
